--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
-  text-align: center;
+* {
+   box-sizing: border-box;
+   padding: 0;
+   margin: 0;
+   text-decoration: none;
+   list-style: none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+   background-color: #d2dbdc;
+   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.app-window {
+   display: flex;
+   height: 100vh;
+   background-color: #ededed;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.sidebar {
+   width: 35%;
+   max-width: 415px;
+   display: flex;
+   flex-direction: column;
+   border-right: 1px solid #ddd;
 }
 
-.App-link {
-  color: #61dafb;
+header {
+   height: 60px;
+   display: flex;
+   padding: 0 15px;
+   justify-content: space-between;
+   align-items: center;
+}
+.header-avatar {
+   width: 40px;
+   height: 40px;
+   border-radius: 30px;
+   cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header-buttons {
+   display: flex;
+}
+.content-area {
 }
