--- a/src/App.css
+++ b/src/App.css
@@ -74,5 +74,20 @@ header {
    background-color: transparent;
    margin-left: 10px;
 }
+.chatlist {
+   flex: 1;
+   background-color: #fff;
+   overflow-y: auto;
+}
+
+.chatlist::-webkit-scrollbar {
+   width: 6px;
+   height: 6px;
+}
+
+.chatlist::-webkit-scrollbar-thumb {
+   background-color: #00000033;
+}
+
 .content-area {
 }
