--- a/src/components/ChatListItem.css
+++ b/src/components/ChatListItem.css
@@ -5,12 +5,8 @@
    height: 70px;
 }
 
-.chatlistitem :hover {
-   background-color: #f5f5f5;
-}
-
 .chatlistitem.active {
-   background-color: #ebebeb;
+   background-color: #e6e3e3;
 }
 
 .chatlist-avatar {
